Update zookeeper_settings.md